; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ioc3-eth.c_nic_read_byte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ioc3-eth.c_nic_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioc3 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ioc3*)* @nic_read_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nic_read_byte(%struct.ioc3* %0) #0 {
  %2 = alloca %struct.ioc3*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.ioc3* %0, %struct.ioc3** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %15, %1
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 8
  br i1 %7, label %8, label %18

8:                                                ; preds = %5
  %9 = load i32, i32* %3, align 4
  %10 = ashr i32 %9, 1
  %11 = load %struct.ioc3*, %struct.ioc3** %2, align 8
  %12 = call i32 @nic_read_bit(%struct.ioc3* %11)
  %13 = shl i32 %12, 7
  %14 = or i32 %10, %13
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %8
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %4, align 4
  br label %5

18:                                               ; preds = %5
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @nic_read_bit(%struct.ioc3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
